--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@inertiajs/react": "^1.0.14",
         "@vitejs/plugin-react": "^4.2.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-toastify": "^10.0.4"
     }
 }
